<resources>
    <string name="app_name">AndroidFundamentalsSeria2</string>
    <string name="this_is_my_first_textview">This is my first TextView :)</string>
    <string name="i_am_a_button">I am a button</string>
    <string name="add_your_email_address">Add your email address</string>
    <string name="i_accept_to_learn_android">I accept to learn Android :)</string>
    <string name="notifications">Notifications</string>
    <string name="this_is_a_searchview">This is a SearchView</string>
    <string name="hello_from_java">Hello from Java code :)</string>
    <string name="error_email_missing">Please add an email address</string>
    <string name="hello_textview1">Hello TextView1 :)</string>
    <string name="hello_textview2">Hello TextView2 :)</string>
    <string name="hello_textview3">Hello TextView3 :)</string>
    <string name="hello_textview4">Hello TextView4 :)</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="i_accept_terms_and_conditions">I accept Terms and Conditions</string>
    <string name="submit">Submit</string>
    <string name="start_second_activity">Start Second Activity</string>
    <string name="call_implicit_intent">Call - Implicit Intent</string>
    <string name="send_message">Send Message</string>
    <string name="start_activity_for_result_example">Start Activity For Result Example</string>
    <string name="debug_activity">Debug Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_activity">Navigation Activity</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="sum">Sum</string>
    <string name="week_2">Week 2</string>
    <string name="week_3_login">Week 3 - Login</string>
    <string name="week_3_spinner">Week 3 - Spinner</string>
    <string name="week_3_viewgroup">Week 3 - ViewGroup</string>
    <string name="week_3_webview">Week 3 - WebView</string>
    <string name="week_4_recyclerview">Week 4 - RecyclerView</string>
    <string name="week_4_constraintlayout">Week 4 - ConstraintLayout</string>
    <string name="week_5_first_activity">Week 5 - First Activity</string>
    <string name="week_5_first_activity_for_result">Week 5 - First Activity For Result</string>
    <string name="week_6_fragment_in_activity">Week 6 - Fragment in Activity</string>
    <string name="week_6_length_activity">Week 6 - Length Activity</string>
    <string name="week_6_sum_activity">Week 6 - Sum Activity</string>
    <string name="week_6_navigation_activity">Week 6 - Navigation Activity</string>
    <string name="week_7_material_design">Week 7 - Material Design</string>
    <string name="display_datepicker">Display DatePicker</string>
    <string name="display_timepicker">Display TimePicker</string>
    <string name="display_alert_dialog_with_buttons">Display Alert Dialog with buttons</string>
    <string name="notice">Notice</string>
    <string name="alert_title">Alert title</string>
    <string name="launch_app">Launch app...</string>
    <string name="reminde_me">Reminde me...</string>
    <string name="cancel">Cancel...</string>
    <string name="click">click</string>
    <string name="error_occured">Error occured</string>
    <string name="retry">Retry</string>
    <string name="retry_message">Please try again later!</string>
    <string name="take_picture">Select picture from Gallery</string>
    <string name="permission_activity">Permission Activity</string>
    <string name="large_text">What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).   Where does it come from? Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.  The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.  Where can I get some? There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</string>
    <string name="collapsing_toolbar">Collapsing Toolbar</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>
    <string name="tab_label1">Here to display some content for Tab1</string>
    <string name="tab_label2">Here to display some content for Tab2</string>
    <string name="tab_label3">Here to display some content for Tab3</string>
    <string name="week_6_tabs">Week 6 - Tabs</string>
    <string name="open_website">Open Website</string>
    <string name="open_location">Open Location</string>
    <string name="share_text">Share text</string>
    <string name="call">Call</string>
    <string name="cant_handle">Can not be handle it...</string>
    <string name="share_text_with">Share text...</string>
    <string name="get_image">Take Picture</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="retrofit_using_github_api">Retrofit using Github API</string>
    <string name="single_click">Single click</string>
    <string name="long_click">Long click</string>
</resources>
